--- a/khan.html
+++ b/khan.html
@@ -105,9 +105,9 @@
            <h2> For more details contact us.</h2>
         </div>
         <ul class="ff">
-            <li>Director ph.no <a href="tel">9550051793</a></li>
-            <li>Principal ph.no <a href="tel">9550051793</a></li>
-            <li>Email:<a href="email">patanabdulaziz@gmail.com</a></li>
+            <li>Director ph.no <a href="tel:9550051793">9550051793</a></li>
+            <li>Principal ph.no <a href="tel:9550051793">9550051793</a></li>
+            <li>Email:<a href="mailto:patanabdulaziz@gmail.com">patanabdulaziz@gmail.com</a></li>
         </ul>
      
     </footer>
